deploy/manifests/prod/us-east-2/tenant/storetheindex/indexstar-canary/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexstar
spec:
  selector:
    matchLabels:
      app: indexstar-canary
  template:
    metadata:
      labels:
        app: indexstar-canary
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: indexstar
          args:
            - '--translateReframe'
            - '--translateNonStreaming'
            # Use service names local to the namespace over HTTP to avoid
            # TLS handshake overhead.
            - '--backends=http://dido-indexer:3000/'
            - '--backends=http://oden-indexer:3000/'
            - '--backends=http://kepa-indexer:3000/'
            - '--backends=http://dhfind.internal.prod.cid.contact/'
            - '--cascadeBackends=http://caskadht.internal.prod.cid.contact/'
            - '--cascadeBackends=http://cassette.internal.prod.cid.contact/'
          resources:
            limits:
              cpu: "3"
              memory: 2Gi
            requests:
              cpu: "3"
              memory: 2Gi
